<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <ListPreference
      android:entries="@array/guesses_list"
      android:entryValues="@array/guesses_list"
      android:key="pref_numberOfChoices"
      android:title="@string/number_of_choices"
      android:summary="@string/number_of_choices_description"
      android:persistent="true"
      android:defaultValue="4" />

   <MultiSelectListPreference
      android:entries="@array/regions_list_for_settings"
      android:entryValues="@array/regions_list"
      android:key="pref_regionsToInclude"
      android:title="@string/world_regions"
      android:summary="@string/world_regions_description"
      android:persistent="true"
      android:defaultValue="@array/regions_list" />

   <EditTextPreference
       android:key="pref_currentQuestion"
       android:title="@string/title_current_question"
       android:summary="@string/description_current_question"
       android:persistent="true"
       android:defaultValue="@string/default_question"
       android:focusable="false" />

   <ListPreference
      android:entries="@array/num_guesses_list"
       android:entryValues="@array/num_guesses_list"
       android:key="pref_numberOfGuesses"
       android:title="@string/num_guesses_name"
       android:summary="@string/num_guesses_summary"
       android:persistent="true"
       android:defaultValue="4"
      />
</PreferenceScreen>